--- a/Map-2-JSON.ipynb
+++ b/Map-2-JSON.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "null"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
     "            boolean: true,\n",
     "            //date: new Date(0)\n",
     "      ]\n",
-    "def mapAsJson = JsonOutput.toJson(map)\n",
+    "mapAsJson = JsonOutput.toJson(map)\n",
     "assert mapAsJson == '{\"list\":[1,2,3],\"integer\":5,\"bigDecimal\":3.1415,\"string\":\"yes\",\"boolean\":true}'\n",
     "assert new JsonSlurper().parseText(mapAsJson) instanceof Map\n",
     "assert new JsonSlurper().parseText(mapAsJson) == map"
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "null"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "null"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "null"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "null"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,25 +231,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "groovy.lang.MissingPropertyException",
-     "evalue": " No such property",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mgroovy.lang.MissingPropertyException: No such property: mapAsJson for class: script1526145908573\u001b[0;0m",
-      "\u001b[1;31m\tat this cell line 5\u001b[0;0m",
-      "\u001b[0;31m\tat com.twosigma.beakerx.groovy.evaluator.GroovyCodeRunner.call(GroovyCodeRunner.java:76)\u001b[0;0m",
-      "\u001b[0;31m\tat com.twosigma.beakerx.groovy.evaluator.GroovyCodeRunner.call(GroovyCodeRunner.java:37)\u001b[0;0m"
-     ]
+     "data": {
+      "text/plain": [
+       "null"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "@Grab(\"org.yaml:snakeyaml:1.16\")\n",
     "import org.yaml.snakeyaml.Yaml\n",
-    "import groovy.json.*\n",
     "\n",
     "assert new Yaml().load(mapAsJson) == map\n"
    ]
